CHANGES TO REMIND

* Version 3.0 Patch 17

+ MINOR ENHANCEMENTS

- Made Remind accept date specs like "Jan 6, 1998" -- the comma is
  ignored.  This was suggested by John Conover <john@johncon.johncon.com>.
  You can even do "REM 27, Aug, 1998, msg bar".  (But I don't know why
  you'd want to.)

- Added www/rem2html, a Perl script which converts the output of
  `remind -p ...' to an HTML table.  The script was contributed by
  Don Schwarz <darkowl@mcs.net>

+ BUG FIXES

- Increased sizes of some statically-allocated buffers.  This doesn't
  really fix the problem, but makes it more manageable.  Because of
  the risk of statically-allocated buffers, REMIND now refuses to
  run if it is installed set-uid or set-gid.

- Using the "-u" option now implies the "-r" option.  This is a
  security feature.

- Added romanian.h to the manifest.  Sorry.

- CalcMinsFromUTC was failing if time_t was unsigned.  I now use
  difftime(), but not all systems have it.  Also, defs.rem was rearranged
  so PostScript stuff works better, and new target "emxomf" was added to
  makefile.os2 which uses OMF linking and a dynamically-linked C
  library.  All three of these fixes are courtesy of Christopher
  J. Madsen <madsen@iglobal.net>.  Thanks, Christopher.

* Version 3.0 Patch 16

+ MINOR ENHANCEMENTS

- Bundled scripts for making a nice WWW calendar server.  See the
  "www" subdirectory in the release.

- Added support for the Romanian language, courtesy of Liviu Daia.

- Changed sunrise() and sunset() as follows:  If the sun never rises,
  sunrise() returns 1440 and sunset() returns 0.  In this case,
  sunrise()-sunset() returns the length of the dark period of the
  day, in minutes.  If the sun never sets, sunrise() returns 0 and
  sunset() returns 1440, and sunset()-sunrise() returns the length
  of the light period of the day, in minutes.  Thanks to Michael Salmon
  for explaining the utility of this.  See the file "defs.rem" for the